# tagtrack

./: .gitignore  README.md  pyproject.toml
tagtrack/: __init__.py  apps.py  models.py  signals.py  tags.py  utils.py
tagtrack/migrations/: 0001_initial.py  0001_squashed-all.py  0002_album.py  0003_alter_album_artist_song.py  0004_alter_song_options_song_retag.py  0005_alter_song_year.py  0006_alter_song_number.py
tagtrack/routers/: __init__.py  albums.py  artists.py  router.py  schemas.py  songs.py
tagtrack/tests/: generate_files.py  helper.py  test_albums_router.py  test_artists_router.py  test_models.py  test_router.py  test_routers.py  test_songs_router.py  test_tags.py  test_utils.py
